# ljmd

./: .gitignore  CMakeLists.txt  README.md  benchmark.md  cbuild.sh  report-openmp.md
benchmarks_code_GPS/Forces_Optimization/: CMakeLists.txt  F_opt_ljmd.e9115200  F_opt_ljmd.o9115200  cbuild.sh  send_job.sh
benchmarks_code_GPS/Forces_Optimization/examples/: argon_108.inp
benchmarks_code_GPS/MPI_only/: CMakeLists.txt  MPI_ljmd.e9115171  MPI_ljmd.o9115171  cbuild.sh  send_job.sh
benchmarks_code_GPS/MPI_only/include/: mdlib-mpi.h  mdlib-serial.h  mdlib-util.h  mdlib-working.h
benchmarks_code_GPS/MPI_only/src/: forces-serial.c  input.c  ljmd-mpi.c  ljmd-serial.c  reading.c  verlet_ti.c
benchmarks_code_GPS/Vanilla_code/: send_job.sh  vanilla_ljmd.o9123896
benchmarks_code_GPS/Vanilla_code/Obj-serial/: Makefile
examples/: CMakeLists.txt
include/: mdlib-mpi.h  mdlib-serial.h  mdlib-util.h  mdlib.h
src/: energies.c  forces-mp-mpi-v2.c  forces-mp-mpi.c  forces-mpi.c  forces.c  input.c  ljmd-mpi.c  ljmd.c  mpi-bounds.c  old_forces-mp-mpi.c  output.c  verlet_ti.c
test/: CMakeLists.txt  first_velverlet.cpp  forces.cpp  input_output.cpp  kinetic_energy.cpp  utilities.cpp
test/ulysses/: send_job.sh  send_job_versionserial.sh
